--- a/css/style.css
+++ b/css/style.css
@@ -426,26 +426,37 @@ section{
     font-weight: 400;
     color: #464646;
     line-height: 20px;
-    outline: none;
+    outline-color:  #2A7AE4;
+    outline-offset: 4px;
+
 }
 
 
-
-
-/* #contenedorContacto form label{
-    text-align: left;
-    background-color: white;
-    border: 1px solid;
-}
-
-#contenedorContacto form input{
-    display: block;
+#inputAsunto{
     width: 656px;
     height: 56px;
+    padding: 16px 12px 16px 12px;
+    border-bottom: 2px solid #C8C8C8;
     border-radius: 4px;
-} */
+    outline-color:  #2A7AE4;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
 
 
+#textareaMensaje{
+    width: 656px;
+    height: 133px;
+    border-radius: 4px;
+    padding: 16px 12px 16px 12px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    border-bottom: 2px solid #C8C8C8;
+    outline-color:  #2A7AE4;
+    
+}
 
 
 #contenedorContacto form button{
@@ -462,3 +473,12 @@ section{
 }
 
 
+
+/* Footer */
+
+footer{
+    height: 102px;
+    align-content: center;
+    font-size: 16px;
+    font-weight: 500;
+}
