--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body {
 header{
     display: flex;
     justify-content: center;
-   background-color: white;
+    background-color: white;
+    border-bottom: 1px solid rgb(118, 194, 248);
+
     
 }
 
@@ -371,10 +373,10 @@ section{
 /* Experiencia */
 
 #Experiencia{
-    height: 943px;
     
-    justify-content: center;
-    align-items: flex-start
+    height: 643px;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #Experiencia h3{
@@ -383,13 +385,29 @@ section{
 
 }
 
+#Experiencia a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#Experiencia img{
+    width: 50%;
+}
+
+#Experiencia img:hover{
+    filter: drop-shadow(1px 2px 3px rgb(83, 82, 82));
+    transform: scale(1.05);
+}
+
+
 
 
 /* Contacto */
 
 #Contacto{
     height: 788px;
-    background-color: #D4E4FA;
+    background-color: rgba(212, 228, 250, 0.70);
 }
 
 #contenedorContacto{
@@ -529,6 +547,10 @@ section{
     line-height: 18.78px;
 }
 
+#contenedorContacto button:hover{
+    transform: scale(1.05);
+}
+
 
 
 /* Footer */
@@ -540,6 +562,7 @@ footer{
     font-weight: 500;
     text-align: center;
     background-color: white;
+    line-height: 30px;
 }
 
 
