--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,7 @@ footer{
 
 /* Mobile */
 
-@media (min-width:320px) {
+@media only screen and (min-width: 320px) and (max-width: 768px) {
    
    
 
@@ -879,7 +879,7 @@ footer{
 
 /* Tablet */
  
-@media (min-width:768px){
+@media only screen and (min-width: 769px) and (max-width: 1024px){
 
     #Cabecera a:last-child{
         font-size: 16px;
