--- a/css/style.css
+++ b/css/style.css
@@ -89,11 +89,12 @@ section{
     width: 1136px;
     display: flex;
     
+    
 }
 
 #quiensoy{
     order: 0;
-    width: 768px;
+    max-width: 730px;
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -101,7 +102,7 @@ section{
 }
 
 #quiensoy h2{
-    font-size: 52px;
+    font-size: 47px;
     font-weight: bold;
 }
 
@@ -123,7 +124,7 @@ section{
     flex-direction: column;
     
     border-radius: 10px;
-    /* box-shadow: 0px 3px 6px 0px #464646; */
+    
     
     text-align: center;
     width: 80px;
@@ -138,11 +139,10 @@ section{
 
 #foto{
     order: 1;
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     overflow: hidden;
-    border-width: 10px;
     box-shadow: 0px 0px 5px 0px black;
     
 } 
@@ -174,20 +174,44 @@ section{
 
 /* seccion 2 */
 #sobreMi{
-    position: relative;
-    display: flex;
+    
+    
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     background-color: rgba(212, 228, 250, 0.70);
     height: 383px;
 }
 
+#contenedorDos{
+    width: 1136px;    
+    height: 60%;
+    text-align: left;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+
+#contenedorDos p{    
+    font-size: 16px;
+    line-height: 1.4rem;
+    font-style: italic;
+   
+}
+
+#firma{
+    width: 160px;
+    height: auto;
+    overflow: hidden;
+}
+
 #logoColombia{
     bottom: 0;
-    right: 200px;
+    right: 0;
     position: absolute;
-    max-height: 360px;
-    max-width: 450px;
+    
+    width: 280px;
     align-content: flex-end;
     
     overflow: hidden;
@@ -198,39 +222,13 @@ section{
 }
 
 #sobreMi h3{
-   
-    padding-right: 25rem;
-
-    text-align: start;
+    text-align: center;
     font-size: 38px;
     font-weight: bold;
     
 }
 
-#contenedorDos{
-    
-    width: 1136px;
-    text-align: left;
 
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-}
-
-
-#contenedorDos p{
-    padding: 15px 0px;
-    width: 751px;
-    font-size: 16px;
-    line-height: 1.4rem;
-    font-style: italic;
-}
-
-#firma{
-    width: 160px;
-    height: auto;
-    overflow: hidden;
-}
 
 
 /* seccion 3 */
@@ -244,7 +242,7 @@ section{
 
 #Skills{
     order: 0;
-    width: 1136px;
+    width: 100%;
     height: 244px;
     flex-direction: column;
     justify-content: space-between;
@@ -294,7 +292,7 @@ section{
 
 #Hobbies{
     order: 1;
-    width: 1136px;
+    width: 100%;
     height: 244px;
     flex-direction: column;
     justify-content: space-between;
@@ -374,7 +372,7 @@ section{
 
 #Experiencia{
     
-    height: 643px;
+    height: 540px;
     flex-direction: column;
     justify-content: space-evenly;
 }
@@ -392,7 +390,7 @@ section{
 }
 
 #Experiencia img{
-    width: 50%;
+    max-width: 850px;
 }
 
 #Experiencia img:hover{
@@ -566,10 +564,167 @@ footer{
 }
 
 
+/* Laptop */
+
+@media screen and (min-width:1024px){
+    
+
+
+}
+
+/* Tablet */
+ 
+@media screen and (max-width:1024px){
+   
+    #Cabecera a{
+        font-size: 14px;
+        
+    }
+
+   
+   
+     #contenedorUno{
+        
+        justify-content: space-around;
+        height: 300px;
+    }
+
+    #quiensoy{
+        order: 0;
+        row-gap: 16px;
+        overflow: hidden;
+        max-width: 410px;
+        
+        
+    }
+    #quiensoy h2{
+        font-size: 26px;
+        
+    }
+    
+    #quiensoy p{
+        font-size: 16px;
+        line-height: normal;
+    }
+    #redes{
+        font-size: 16px;
+        
+        gap: 8px;
+    }
+
+    #foto{
+        order: 1;
+        width: 246px;
+        height: 246px;
+    }
+
+
+
+    
+
+    #sobreMi{
+        height: 286px;
+        
+        
+    }
+
+    #contenedorDos{
+        height: 222px;
+        max-width: 700px;
+        
+    }
+
+    #logoColombia{
+        order: 2;
+        right: 60px;
+        height: 185px;
+       
+        
+    }
+
+    #logoColombia img{
+        height: 100%;
+    }
+
+
+
+    #skillHobbiesFormacion{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .contenedorSkillsHobbies{
+        max-width: 720px;
+    }
+
+    #Skills, #Hobbies{
+        width: 704px;
+        height: 250px;
+        justify-content: space-around;
+        margin-top: 0;
+    }
+
+    #Formacion{
+        height: 291px;
+        width: 100%;
+        padding: 10px 1px 10px 1px;
+    }
+
+    #contenedorFormacion{
+        max-width: 720px;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 8px;
+    }
+
+
+    
+
+    .contenedorIgm{
+        width: 240px;
+        height: 118px;
+    }
+
+
+
+
+
+
+    #Experiencia{
+        height: 410px;
+    }
+
+    #Experiencia img{
+        width: 60%;
+    }
+
+
+
+
+
+
+
+    #contenedorContacto{
+        width: 704px;
+        height: 573px;
+        
+        
+    }
+
+    #imgContacto{
+        display: none;
+    }
+
+
+
+} 
 
 /* Mobile */
 
-@media only screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width:480px) {
+    
    
    
 
@@ -675,11 +830,12 @@ footer{
         order: 2;
         right: 0;
         bottom: 0;
-        height: 135px;
+        width: 135px;
+        height: auto;
     }
 
     #logoColombia img{
-        height: 100%;
+        width: 100%;
     }
 
 
@@ -871,119 +1027,7 @@ footer{
         width: 133px;    
         font-size: 14px;
     } 
-} 
-
-
-
-
-
-/* Tablet */
- 
-@media only screen and (min-width: 769px) and (max-width: 1024px){
-
-    #Cabecera a:last-child{
-        font-size: 16px;
-        font-weight: bold;
-    }
-
-
-    #contenedorUno{
-        flex-direction: row;
-        height: 300px;
-        
-        
-    }
-
-    #quiensoy{
-        order: 0;
-        row-gap: 16px;
-        overflow: hidden;
-        
-    }
-    
-    #quiensoy p{
-        font-size: 16px;
-    }
-    #redes{
-        font-size: 16px;
-        
-        gap: 8px;
-    }
-
-    #foto{
-        order: 1;
-        width: 246px;
-        height: 246px;
-    }
-
-
-
-    
-
-    #sobreMi{
-        height: 286px;
-        
-        
-    }
-
-    #contenedorDos{
-        height: 222px;
-        width: 704px;
-        
-    }
-
-    #logoColombia{
-        order: 2;
-        right: 60px;
-        height: 150px;
-        
-    }
-
-
-
-    #skillHobbiesFormacion{
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    #Skills, #Hobbies{
-        width: 704px;
-        height: 250px;
-        justify-content: space-around;
-        margin-top: 0;
-    }
-
-    #Formacion{
-        height: 291px;
-        width: 100%;
-        padding: 10px 1px 10px 1px;
-    }
-
-    #contenedorFormacion{
-       
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 8px;
-    }
-
-
-    
-
-    .contenedorIgm{
-        width: 240px;
-        height: 118px;
-    }
-
-
-
-
-
-
-    #Experiencia{
-        height: 410px;
-    }
+}
 
 
 
@@ -991,13 +1035,4 @@ footer{
 
 
 
-    #contenedorContacto{
-        width: 704px;
-        height: 573px;
-        
-        
-    }
 
-
-
-} 
